@@ -1,6 +1,6 @@
 export(asEuclidean, asHomogeneous, aspect3d, axes3d, axis3d, box3d,
         bbox3d, bg3d, clear3d, cube3d, decorate3d, dot3d, ellipse3d,
-	identityMatrix,
+	grid3d, identityMatrix,
 	light3d, lines3d, material3d, mtext3d, 
 	oh3d, open3d, par3d, particles3d, persp3d, plot3d, points3d, pop3d,
 	qmesh3d, quads3d, rgl.bbox, rgl.bg, rgl.bringtotop, rgl.clear,
@@ -35,5 +35,9 @@ export(asEuclidean, asHomogeneous, aspect3d, axes3d, axis3d, box3d,
  S3method(plot3d, default)
  S3method(plot3d, qmesh3d)
  S3method(persp3d, default)
+ 
+ if(tools:::.OStype() == "windows") {
+   import(utils) # only needed for getWindowsHandle
+ }
  
  useDynLib(rgl)
