@@ -166,4 +166,5 @@ v0.67-3
   - added id return values to primitives and higher level functions, 
     and to rgl.pop(); added rgl.ids() to report on them.
   - updated gl2ps to version 1.3.1, adding support for svg and pgf output formats.
+  - added grid3d(), added nticks argument to bbox3d, axis3d and axes3d.
     
